# Cofrinho_Pessoal

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  settings.json
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  conftest.py  manage.py  mkdocs.yml  pyproject.toml
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  prod.py
backend/financas/: admin.py  apps.py  autenticacao.py  middleware.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
backend/financas/migrations/: 0001_initial.py  0002_log_auditoria.py  0003_log_acesso.py  0004_hash_integridade_log_auditoria.py  0005_entrada_atualizado_em_gasto_atualizado_em.py  0006_entrada_idx_entrada_usuario_data_and_more.py
backend/financas/services/: entrada.py  gasto.py
backend/financas/tests/: test_auditoria_integracao.py  test_auth_cookies.py  test_bulk.py  test_bulk_entrada_categoria_fonte.py  test_error_handlers.py  test_log_integridade.py  test_log_sanitizacao.py  test_logout.py  test_middleware.py  test_model_categoria.py  test_model_entrada.py  test_model_fonte.py  test_model_gasto.py  test_models.py  test_password_policy.py  test_queries.py  test_security_headers.py  test_serializers.py  test_signals.py  test_signals_categoria_fonte_user.py  test_throttling.py  test_validacao_caracteres.py  test_view_autenticacao.py  test_view_categoria.py  test_view_entrada.py  test_view_entrada_crud.py  test_view_entrada_filtros.py  test_view_entrada_isolamento.py  test_view_fonte.py  test_view_gasto.py  test_view_gasto_crud.py  test_view_gasto_filtros.py  test_view_gasto_isolamento.py  test_view_idempotencia.py  test_view_jwt.py  test_view_ordenacao.py  test_view_paginacao.py  test_view_resumo.py  test_views.py
backend/scripts/: check_file_length.py
backend/whatsapp/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
backend/whatsapp/migrations/: 0001_initial.py  0002_alter_sessaoconversa_estado.py
backend/whatsapp/services/: __init__.py  cliente_waha.py  handlers_crud.py  handlers_edicao.py  handlers_entrada.py  handlers_exclusao.py  handlers_gasto.py  handlers_listagem.py  processador.py  utils.py
backend/whatsapp/tests/: conftest.py  test_fluxo_conversa.py  test_fluxo_editar_entrada.py  test_fluxo_editar_gasto.py  test_fluxo_entrada_resumo.py  test_fluxo_excluir_entrada.py  test_fluxo_excluir_gasto.py  test_fluxo_gasto.py  test_fluxo_listar_entradas.py  test_fluxo_listar_gastos.py  test_models_whatsapp.py  test_parse_valor.py  test_queries_whatsapp.py  test_rate_limit.py  test_services_utils.py  test_signals_whatsapp.py  test_timeout.py  test_webhook.py  test_webhook_autenticacao.py  test_webhook_comportamento.py
docs/: frontend.md  index.md  setup.md
docs/api/: autenticacao.md  endpoints.md  resumo.md
docs/modelos/: categoria.md  entrada.md  fonte.md  gasto.md
docs/whatsapp/: bot.md  configuracao.md
frontend/: .dockerignore  .prettierrc  Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/scripts/: verificar-pacotes-seguros.js
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: autenticacao.ts  axios.ts  cliente.ts  financas.ts
frontend/src/components/: BarraTopo.test.tsx  BarraTopo.tsx  GraficoCard.tsx  Layout.tsx  MenuLateral.test.tsx  MenuLateral.tsx  PrivateRoute.test.tsx  PrivateRoute.tsx  RotaPrivada.test.tsx  RotaPrivada.tsx  Sidebar.test.tsx  Sidebar.tsx  TopBar.test.tsx  TopBar.tsx
frontend/src/context/: AuthContext.test.tsx  AuthContext.tsx  useAuth.ts  (+4 more)
scripts/: backup_db.Tests.ps1  backup_db.ps1
(+58 files in other folders)
